--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: python
+python:
+  - "3.6"
 install:
-    - pip install -r requirements.txt
-    - cp cronjobManager/settings_template.py cronjobManager/settings.py
+  - pip install django coverage
+  - cp cronjobManager/settings_template.py cronjobManager/settings.py
 script:
-    - python manager test
-
+  - coverage run runtests.py
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 
 
