--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - pip install django coverage
   - cp cronjobManager/settings_template.py cronjobManager/settings.py
 script:
-  - coverage run runtests.py
+  - coverage run manage.py test
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 
